added colab support

--- a/LabExercise.ipynb
+++ b/LabExercise.ipynb
@@ -16,6 +16,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd7dda2e-7981-471a-827d-38d66c361084",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "source": [
+    "*Note: If you are running this lab on Google Colab then you will need to run the following code cell to obtain the source files.* "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "034df1bd-677c-4d0e-877e-861a64d438a4",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!git init .\n",
+    "!git remote add -f origin https://github.com/Cambridge-ICCS/CUDALabAfternoon.git\n",
+    "!git checkout main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "db1300d2-c800-420f-8a69-5b9a2e5649b4",
    "metadata": {},
    "source": [
@@ -27,7 +57,7 @@
     "\n",
     "Within the implementation provided, the box blur has the property that outside of the bounds of the input image values are `0`. The code works for fixed sized square images. An image `input.ppm` is provided in the ppm format and code is provided for image reading and writing. You can use your own image but make sure that the `IMAGE_SIZE` macro is changed to reflect your image size.\n",
     "   \n",
-    "![Box Blur](.\\blur.png)\n",
+    "![Box Blur](./blur.png)\n",
     "\n",
     "*Figure 1 - Result of applying the Box filter for 0, 50 and 100 iterations on a photograph of the trainers dog (note: he looks cuter than he is...)*\n",
     "\n",
@@ -61,7 +91,7 @@
    "outputs": [],
    "source": [
     "# execute\n",
-    "!.\\boxblur"
+    "!./boxblur"
    ]
   },
   {
@@ -201,7 +231,7 @@
    "outputs": [],
    "source": [
     "# execute\n",
-    "!.\\boxblur"
+    "!./boxblur"
    ]
   },
   {
@@ -277,7 +307,7 @@
    "outputs": [],
    "source": [
     "# execute\n",
-    "!.\\boxblur"
+    "!./boxblur"
    ]
   },
   {
@@ -343,7 +373,7 @@
    "outputs": [],
    "source": [
     "# execute\n",
-    "!.\\boxblur"
+    "!./boxblur"
    ]
   },
   {
@@ -369,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git checkout solutions -- boxblur.cu"
+    "!git checkout origin/solutions -- boxblur.cu"
    ]
   },
   {
