added pillow install

--- a/LabExercise.ipynb
+++ b/LabExercise.ipynb
@@ -101,7 +101,21 @@
    "source": [
     "## Displaying the starting image\n",
     "\n",
-    "You can view the original (starting) image for this exercise by running the code cell below. Note: This will resize the image to `512 x 512` and requires that the Python environment has the `pillow` package. The file format is a `ppm` file which is an uncompressed human readable format (it is not recommended to open it in a text editor as the original is `2048 x 2048` pixels in size!)."
+    "You can view the original (starting) image for this exercise by running the code cell below. The file format is a `ppm` file which is an uncompressed human readable format (it is not recommended to open it in a text editor as the original is `2048 x 2048` pixels in size!).\n",
+    "\n",
+    "Note: This will resize the image to `512 x 512` and requires that the Python environment has the `pillow` package. You can install pillow using the code cell below if it is not already available in your python environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "617f5264-17fb-42ec-9803-6a1321176f9b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!pip install pillow"
    ]
   },
   {
