fix spelling typos in the lab

--- a/LabExercise.ipynb
+++ b/LabExercise.ipynb
@@ -63,7 +63,7 @@
     "\n",
     "Try compiling and running the code using the code cells below (or via a jupyter-lab Terminal) and examine the output of the blurred image. Make a note of the execution time reported.\n",
     "\n",
-    "*Note: The pre-processer declaration (`-D`) in the compilation is used to change code paths so that different versions of the main box blur loop can be easily switched between. Examine the starting code so that you can see where the switch takes place within the `main` function. There is a seperate switch case for each exercise in this lab.*\n",
+    "*Note: The pre-processor declaration (`-D`) in the compilation is used to change code paths so that different versions of the main box blur loop can be easily switched between. Examine the starting code so that you can see where the switch takes place within the `main` function. There is a separate switch case for each exercise in this lab.*\n",
     "\n",
     "\n"
    ]
@@ -199,7 +199,7 @@
    "source": [
     "### Step 3\n",
     "\n",
-    "A pointer `d_image_temp` has been defined for you. Use this as a temporary pointer to swap the areas of memory pointer to by `d_image` and `d_image_output` after the box blur kernel is applied.\n"
+    "A pointer `d_image_temp` has been defined for you. Use this as a temporary pointer to swap the areas of memory pointed to by `d_image` and `d_image_output` after the box blur kernel is applied.\n"
    ]
   },
   {
