change the way solutions are checked
* solutions can be checked using `git show` instead of `git checkout`
  meaning that the student's work is not overridden
* solution.cu is added to the gitignore so that the solution does not
  get committed by mistake

--- a/LabExercise.ipynb
+++ b/LabExercise.ipynb
@@ -403,7 +403,7 @@
    "id": "42ea6ae7-0650-4ad9-a4c9-968769ef4797",
    "metadata": {},
    "source": [
-    "If you have found that you have got stuck with the code you can view the solutions by checking out the solution file using the code cell below. The command will checkout a single file from the solutions branch of the repository but it will override any changes you have made."
+    "If you have found that you have got stuck with the code you can view the solutions by checking out the solution file using the code cell below."
    ]
   },
   {
@@ -413,7 +413,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git checkout origin/solutions -- boxblur.cu"
+    "!git show origin/solutions:boxblur.cu > solution.cu\n",
+    "!nvcc solution.cu -D EXERCISE_MODE=STARTING_CODE -o boxblur && ./boxblur\n",
+    "!nvcc solution.cu -D EXERCISE_MODE=EXERCISE_01 -o boxblur && ./boxblur\n",
+    "!nvcc solution.cu -D EXERCISE_MODE=EXERCISE_02 -o boxblur && ./boxblur\n",
+    "!nvcc solution.cu -D EXERCISE_MODE=EXERCISE_03 -o boxblur && ./boxblur"
    ]
   },
   {
